<resources>
    <string name="app_name">ApemApp</string>
    <string name="button_next">Button Next</string>
    <string name="gambar_logo">Gambar Logo</string>
    <string name="a_pem">A-PEM</string>
    <string name="pemrograman_dasar">Pemrograman Dasar</string>
    <string name="adaptive_mobile_learning">Adaptive Mobile Learning</string>
    <string name="kelas">Untuk Siswa Kelas X</string>
    <string name="jurusan">Multimedia SMK</string>
    <string name="selamat_datang">Selamat Datang !</string>
    <string name="daftar">Daftar</string>
    <string name="tidak_punya_akun">Tidak Punya Akun ?</string>
    <string name="masuk">Masuk</string>
    <string name="password">Password</string>
    <string name="nis">NIS</string>
    <string name="sudah_punya_akun">Sudah Punya Akun ?</string>
    <string name="nama">Nama Lengkap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda">Beranda</string>
    <string name="menu_materi">Menu Materi</string>
    <string name="sayang">Sayang</string>
    <string name="sudah_siap_belajar_hari_ini">Sudah Siap Belajar Hari Ini ?</string>
    <string name="halo">Halo,</string>
    <string name="kompetensi_dasar">Kompetensi Dasar</string>
    <string name="output_compile">Output</string>
    <string name="status_compile">Status</string>
    <string name="memory_compile">Memory</string>
    <string name="cpu_compile">CPU Time</string>
    <string name="detail">Detail</string>
    <string name="kd_array1">3.8 Menganalisis penggunaan array untuk penyimpanan data di memori</string>
    <string name="array">Array</string>
    <string name="fungsi">Fungsi</string>
    <string name="kd_fungsi">39. Menerapkan Penggunaan Fungsi</string>
    <string name="judul_materi">Materi</string>
    <string name="kompetensi_dasar_3.9">Kompetensi Dasar 3.9</string>
    <string name="kompetensi_dasar_3.8">Kompetensi Dasar 3.8</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="keluar">Keluar</string>
    <string name="cari_kata">Cari Kata</string>
    <string name="kamus">KAMUS</string>
    <string name="kata">Kata</string>
    <string name="penjelasan">Penjelasan</string>
    <string name="istilah2">Contoh : Kamu dapat mencoba “OOP” atau “Integer”</string>
    <string name="istilah1">Cari Kata, Tipe Data, Istilah...</string>
    <string name="cari1">Cari</string>
    <string name="question">Siapakah pencipta bahasa pemrograman pertama kali?</string>
    <string name="number_question">1</string>
    <string name="maxQuestion">dari 20</string>
    <string name="option_answer_text">Dennis Ritchie</string>
    <string name="tv_quiz_time">WAKTUNYA KUIS !</string>
    <string name="tv_quiz_information">Kuis ini berguna untuk membantu mengukur kemampuan kamu sejauh mana pemahaman kamu terhadap materi</string>
    <string name="btn_next">Lanjut</string>
    <string name="btn_finish">Selesai</string>
    <string name="tv_rules_header">Petunjuk Pengerjaan Kuis</string>
    <string name="tv_first_rule">Pastikan anda sudah memahami materi yang telah anda pelajari.</string>
    <string name="tv_first_number_rule">1.</string>
    <string name="tv_second_rule">Kuis ini disajikan dengan 20 soal dengan masing – masing soal terdapat 5 pilihan</string>
    <string name="tv_second_number_rule">2.</string>
    <string name="tv_third_rule">Bacalah soal kuis dengan seksama</string>
    <string name="tv_third_number_rule">3.</string>
    <string name="tv_fourth_rule">Pilih salah satu pilihan jawaban yang menurut anda benar</string>
    <string name="tv_fourth_number_rule">4.</string>
    <string name="tv_fifth_rule">Kemudian tekan tombol “Lanjut” untuk melanjutkan ke nomor soal berikutnya.</string>
    <string name="tv_fifth_number_rule">5.</string>
    <string name="tv_sixth_rule">Skor 5 untuk jawaban benar, Skor 0 untuk jawaban salah</string>
    <string name="tv_sixth_number_rule">6.</string>
    <string name="horizontal_line">- - - - - - - - - - - - - - - - - - - - - - - - - - -</string>
    <string name="memory_use">Memori yang digunakan :</string>
    <string name="time_compilatiion">Waktu Kompilasi :</string>
    <string name="result_compilation">Hasil Kompilasi</string>
    <string name="looping">Perulangan</string>
    <string name="instruction">Petunjuk Penggunaan</string>
    <string name="developer_profile">Profil Pengembang</string>
    <string name="looping_material_access">Akses materi perulangan</string>
    <string name="function_material_access">Akses materi fungsi</string>
    <string name="array_material_access">Akses materi array</string>

</resources>