<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".home.OnlineCompiler.ResultCodeActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow_back"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/output_compile"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/status_compile"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_output"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/memory_compile"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_status"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_cpu_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cpu_compile"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_memory"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>